--- a/index.html
+++ b/index.html
@@ -236,11 +236,6 @@
 
     td.gpCol{ font-weight:800; }
 
-    
-    tbody tr:hover{
-      background: rgba(255,255,255,.06);
-    }
-
     .notice{
       display:none;
       margin-top:10px;
@@ -312,7 +307,7 @@
         <div class="notice" id="validationNotice"></div>
 
         <div class="hint">
-          Tip: Tap a row in the GP% table to set that RRP instantly (switches to MANUAL).
+          iOS tip: keyboard will stay open while typing (no auto-scroll while focused).
         </div>
       </section>
 
@@ -415,6 +410,7 @@
     };
   }
 
+  // Adaptive range based on RRP
   function adaptiveRange(rrp){
     if(rrp < 200) return 50;
     if(rrp < 1000) return 100;
@@ -498,6 +494,16 @@
     });
   }
 
+  function blurActive(){
+    const el = document.activeElement;
+    if(el && el.tagName === "INPUT") el.blur();
+  }
+
+  function isTypingInInput(){
+    const el = document.activeElement;
+    return el && el.tagName === "INPUT";
+  }
+
   function validateInputs(cost, rrp){
     const notice = $("validationNotice");
     notice.className = "notice";
@@ -530,6 +536,7 @@
     }
   }
 
+  // center=true will center ONLY when no input is focused (fixes iOS keyboard dismissal)
   function updateCost({center=true} = {}){
     const cost = n($("cost").value);
     const rrp  = n($("rrpInc").value);
@@ -555,7 +562,7 @@
       const isStandard = Math.abs(r - rrp) < 0.005;
 
       body.insertAdjacentHTML("beforeend",`
-        <tr class="${isStandard ? "standard" : ""}" data-rrp="${r}">
+        <tr class="${isStandard ? "standard" : ""}">
           <td>${money(r)}</td>
           <td class="right">${money(t.gp$)}</td>
           <td class="right gpCol">${pct(t.gpPct)}</td>
@@ -564,7 +571,8 @@
       `);
     }
 
-    if(center) centerHighlightRow();
+    // IMPORTANT: iOS can drop the keyboard if we programmatically scroll while an input is focused
+    if(center && !isTypingInInput()) centerHighlightRow();
   }
 
   function updateMargin(){
@@ -592,79 +600,45 @@
     $("tab-margin").setAttribute("aria-selected", isCost ? "false" : "true");
   }
 
-  // ===== Super-clean / invisible keyboard flow =====
-  // ===== Super-clean / invisible keyboard flow =====
-function blurActive(){
-  const el = document.activeElement;
-  if(el && el.tagName === "INPUT") el.blur();
-}
-
-// Remove window scroll blur (causes iPhone keyboard to close while typing)
-// window.addEventListener("scroll", blurActive, {passive:true});
-
-// Only blur when the user touches the table area (intentional)
-$("tableScroll").addEventListener("touchstart", blurActive, {passive:true});
-
-// Tapping outside inputs blurs (still invisible)
-document.addEventListener("pointerdown", (e)=>{
-  const el = document.activeElement;
-  const isInputFocused = el && el.tagName === "INPUT";
-  if(!isInputFocused) return;
-
-  const tappedInput = e.target.closest("input");
-  if(!tappedInput) blurActive();
-}, {passive:true});
-
-
-  // 1) If user scrolls anywhere, hide keyboard (mobile-friendly, invisible)
+  // Super-clean / invisible keyboard flow (safe on iOS)
+  // - DO NOT blur on window scroll (iOS micro-scroll while typing)
+  // - Blur when user touches the table area (intentional)
   $("tableScroll").addEventListener("touchstart", blurActive, {passive:true});
-  $("tableScroll").addEventListener("scroll", blurActive, {passive:true});
 
-  // 2) Tapping outside inputs blurs (no visible "Done" button)
+  // Tapping outside inputs blurs
   document.addEventListener("pointerdown", (e)=>{
     const el = document.activeElement;
     const isInputFocused = el && el.tagName === "INPUT";
     if(!isInputFocused) return;
 
-    // If the tap is NOT on an input (or its label), blur.
     const tappedInput = e.target.closest("input");
     if(!tappedInput) blurActive();
   }, {passive:true});
 
-  // 3) Enter in cost -> suggest in AUTO, focus RRP, select it
+  // Enter in cost -> suggest in AUTO, focus RRP
   $("cost").addEventListener("keydown", e => {
     if(e.key === "Enter"){
       e.preventDefault();
       if(!rrpManuallyEdited) suggestRrpFromCost();
-      updateCost();
+      updateCost({center:true});
       $("rrpInc").focus();
       $("rrpInc").select();
     }
   });
 
-  // 4) Enter in RRP -> blur and scroll table into view
-  $("rrpInc").addEventListener("keydown", e => {
-    if(e.key === "Enter"){
-      e.preventDefault();
-      blurActive();
-      // bring table into view on smaller screens
-      $("tableCard").scrollIntoView({behavior:"smooth", block:"start"});
-    }
-  });
-
-  // Keep RRP updating in AUTO mode
+  // Cost typing: NO centering (prevents iOS keyboard dismissal)
   $("cost").addEventListener("input", () => {
     if(!rrpManuallyEdited) suggestRrpFromCost();
-    updateCost();
+    updateCost({center:false});
   });
 
-  // RRP manual edit handling (clearing keeps it blank)
+  // RRP typing: NO centering (prevents iOS keyboard dismissal)
   $("rrpInc").addEventListener("input", () => {
     const val = $("rrpInc").value.trim();
     if(val !== ""){
       rrpManuallyEdited = true;
       setRrpMode("manual");
-      updateCost();
+      updateCost({center:false});
       return;
     }
     rrpManuallyEdited = false;
@@ -673,22 +647,30 @@ document.addEventListener("pointerdown", (e)=>{
     validateInputs(n($("cost").value), NaN);
   });
 
+  // Enter in RRP -> blur and scroll table into view
+  $("rrpInc").addEventListener("keydown", e => {
+    if(e.key === "Enter"){
+      e.preventDefault();
+      blurActive();
+      $("tableCard").scrollIntoView({behavior:"smooth", block:"start"});
+      updateCost({center:true});
+    }
+  });
+
   // Step buttons (snappy + no keyboard pop)
   document.querySelectorAll(".stepBtns button").forEach(btn=>{
     btn.addEventListener("pointerdown", (e)=>{
       e.preventDefault();
-      blurActive(); // invisible + prevents keyboard staying up on iPhone
+      blurActive();
       const step = Number(btn.dataset.step);
       const rrp = n($("rrpInc").value) || 0;
       const next = rrp + step;
       $("rrpInc").value = (Math.round(next * 100) / 100).toFixed(2);
       rrpManuallyEdited = true;
       setRrpMode("manual");
-      updateCost();
+      updateCost({center:true});
     });
   });
-
-  
 
   // Increment selector
   document.querySelectorAll(".chipBtn").forEach(btn=>{
@@ -696,7 +678,7 @@ document.addEventListener("pointerdown", (e)=>{
       const v = btn.dataset.inc;
       selectedIncrement = (v === "auto") ? null : Number(v);
       updateIncrementUI();
-      updateCost();
+      updateCost({center:true});
     });
   });
 
